[gd_scene load_steps=18 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://assets/shadow.png" type="Texture" id=2]
[ext_resource path="res://assets/spongebob-idle.atlastex" type="Texture" id=3]
[ext_resource path="res://assets/386657__jalastram__sfx-jump-36.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/86005__nextmaking__landing-on-the-ground.wav" type="AudioStream" id=5]

[sub_resource type="Animation" id=1]

resource_name = "idle"
length = 0.75
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Node2D/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.3, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Node2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.3, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 0 ), Vector2( 0, 1 ), Vector2( -1, 1 ), Vector2( -2, 2 ), Vector2( -1, 1 ) ]
}

[sub_resource type="RectangleShape2D" id=2]

extents = Vector2( 8, 16 )

[sub_resource type="Animation" id=3]

resource_name = "idle"
length = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Model/AnimationPivot:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=4]

resource_name = "run"
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Model/AnimationPivot:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 30.0, -30.0 ]
}

[sub_resource type="Animation" id=5]

length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Model/AnimationPivot:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 30.0, -30.0 ]
}

[sub_resource type="Animation" id=6]

resource_name = "face_left"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Model:scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 2 ),
"update": 3,
"values": [ 1.0 ]
}

[sub_resource type="Animation" id=7]

resource_name = "face_right"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Model:scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 2 ),
"update": 3,
"values": [ -1.0 ]
}

[sub_resource type="Animation" id=8]

resource_name = "idle"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Model:scale:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 3,
"values": [ 1.0 ]
}

[sub_resource type="Animation" id=9]

resource_name = "jump_down"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Model:scale:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 3,
"values": [ 0.8 ]
}

[sub_resource type="Animation" id=10]

resource_name = "jump_up"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Model:scale:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1.41421 ),
"update": 3,
"values": [ 1.2 ]
}

[sub_resource type="AudioStreamRandomPitch" id=11]

audio_stream = ExtResource( 4 )

[sub_resource type="AudioStreamRandomPitch" id=12]

audio_stream = ExtResource( 5 )

[node name="Player" type="KinematicBody2D" groups=[
"player",
]]
collision_layer = 2
collision_mask = 13
collision/safe_margin = 0.001
script = ExtResource( 1 )

[node name="Shadow" type="Node2D" parent="."]
position = Vector2( 0, 20 )

[node name="Sprite" type="Sprite" parent="Shadow"]
position = Vector2( 0, 1 )
texture = ExtResource( 2 )

[node name="Model" type="Node2D" parent="."]
editor/display_folded = true

[node name="AnimationPivot" type="Position2D" parent="Model"]
position = Vector2( 0, 15 )

[node name="Node2D" type="Node2D" parent="Model/AnimationPivot"]

[node name="Sprite" type="Sprite" parent="Model/AnimationPivot/Node2D"]
position = Vector2( -2, -13 )
texture = ExtResource( 3 )
hframes = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="Model/AnimationPivot"]
autoplay = "idle"
anims/idle = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 4 )
shape = SubResource( 2 )

[node name="MoveAnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/idle = SubResource( 3 )
anims/run = SubResource( 4 )
anims/walk = SubResource( 5 )
blend_times = [ "run", "idle", 0.2, "run", "walk", 0.1, "walk", "idle", 0.2, "walk", "run", 0.1 ]

[node name="FacingAnimationPlayer" type="AnimationPlayer" parent="."]
anims/face_left = SubResource( 6 )
anims/face_right = SubResource( 7 )

[node name="JumpingAnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/idle = SubResource( 8 )
anims/jump_down = SubResource( 9 )
anims/jump_up = SubResource( 10 )

[node name="ShadowRayCastRight" type="RayCast2D" parent="."]
visible = false
position = Vector2( 7, 0 )
enabled = true
cast_to = Vector2( 0, 640 )

[node name="ShadowRayCastLeft" type="RayCast2D" parent="."]
visible = false
position = Vector2( -7, 0 )
enabled = true
cast_to = Vector2( 0, 640 )

[node name="DialogPosition" type="Position2D" parent="."]
position = Vector2( 0, -22 )

[node name="Jump" type="AudioStreamPlayer2D" parent="."]
stream = SubResource( 11 )
attenuation = 0.482968

[node name="Landing" type="AudioStreamPlayer2D" parent="."]
stream = SubResource( 12 )
pitch_scale = 1.1
attenuation = 0.392292

